Updated through rs script

--- a/src/public/stylesheets/smaller.css
+++ b/src/public/stylesheets/smaller.css
@@ -1,9 +1,12 @@
 @media screen and (max-width: 900px)  {
   .search {
-    float: none;
     position: absolute;
     top: 351px;
     right: 190px;
+  }
+
+  .image {
+    float: none;
   }
 
   label {
