--- a/src/public/stylesheets/small.css
+++ b/src/public/stylesheets/small.css
@@ -7,6 +7,10 @@
     transition-property: right;
   }
 
+  .image {
+    position: static;
+  }
+
   label {
     position: absolute;
     top: 300px;
