--- a/src/public/stylesheets/smallest.css
+++ b/src/public/stylesheets/smallest.css
@@ -19,4 +19,11 @@
   .newThreadDiv {
     float: none;
   }
+
+  .menu {
+    display: -webkit-flex; /* Safari */
+    -webkit-flex-wrap: nowrap; /* Safari 6.1+ */
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
