--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -7,6 +7,7 @@ html(lang='is')
     link(rel='stylesheet', href='/stylesheets/small.css')
     link(rel='stylesheet', href='/stylesheets/smaller.css')
     link(rel='stylesheet', href='/stylesheets/smallest.css')
+    link(rel='stylesheet', href='/stylesheets/big.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
   body
     header
