--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -153,7 +153,34 @@ a{
   transition-property: border-radius;
 }
 
-.newThreadDiv:hover .menu {
+ {}
+
+.menu:hover {
+  background: rgb(250,180,135); /* Old browsers */
+  background: -webkit-linear-gradient(left,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(244, 139, 194) 85%,
+    rgb(244, 139, 194) 95%,
+    rgba(244,139,194,0) 100%);
+  background: -o-linear-gradient(left,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(244, 139, 194) 85%,
+    rgb(244, 139, 194) 95%,
+    rgba(244,139,194,0) 100%);
+  background: linear-gradient(to right,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(244, 139, 194) 85%,
+    rgb(244, 139, 194) 95%,
+    rgba(244,139,194,0) 98%);
+}
+
+.menu .nav:hover .image:hover{
   background: rgb(250,180,135); /* Old browsers */
   background: -webkit-linear-gradient(left,
     rgba(250,180,135,0) 0%,
