--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -49,8 +49,7 @@ header {
   width: 100%;
   height: 300px;
   background: transparent url(/images/background.png) fixed 65% 150%;
-  background-repeat: repeat-x;
-  background-size: cover;
+  background-repeat: repeat;
 }
 
 h1.pageheader {
