--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -101,6 +101,35 @@ main {
     rgba(244,139,194,1) 95%,
     rgba(244,139,194,0) 98%);
   height: 81px;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+}
+
+.menuFade {
+  background: rgb(250,180,135); /* Old browsers */
+  background: -webkit-linear-gradient(left,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(71, 198, 237) 85%,
+    rgb(71, 198, 237) 95%,
+    rgba(244,139,194,0) 100%);
+  background: -o-linear-gradient(left,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(71, 198, 237) 85%,
+    rgb(71, 198, 237) 95%,
+    rgba(244,139,194,0) 100%);
+  background: linear-gradient(to right,
+    rgba(250,180,135,0) 0%,
+    rgba(250,180,135,1) 20px,
+    rgba(250,180,135,1) 80%,
+    rgb(71, 198, 237) 85%,
+    rgb(71, 198, 237) 95%,
+    rgba(244,139,194,0) 98%);
 }
 
 .nav {
