--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,6 +10,10 @@ html(lang='is')
     link(rel='stylesheet', href='/stylesheets/big.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
     meta(name='viewport', content='width=device-width, initial-scale=0.5')
+    script
+      $(".newThreadDiv").hover(function (){
+        $(this).parent("div").addClass("menuFade")
+      });
   body
     header
       a(href='/')
