Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,9 +11,9 @@ html(lang='is')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
     meta(name='viewport', content='width=device-width, initial-scale=0.5')
     script
-      $(".newThreadDiv").hover(function (){
+      /*$(".newThreadDiv").hover(function (){
         $(this).parent("div").addClass("menuFade")
-      });
+      });*/
   body
     header
       a(href='/')
