--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,6 +10,7 @@ html(lang='is')
     link(rel='stylesheet', href='/stylesheets/big.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
     meta(name='viewport', content='width=device-width, initial-scale=0.5')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script(src='/javascript/hover.js')
   body
     header
