Updated through rs script

--- a/src/public/stylesheets/small.css
+++ b/src/public/stylesheets/small.css
@@ -2,9 +2,10 @@
   .search {
     position: absolute;
     top: 351px;
-    right: 240px;
+    left: 537px;
     transition-duration: 1s;
     transition-property: right;
+    padding: 0px 3px 5px 4px;
   }
 
   .image {
