Updated through rs script

--- a/src/public/stylesheets/small.css
+++ b/src/public/stylesheets/small.css
@@ -5,6 +5,7 @@
     left: 537px;
     transition-duration: 1s;
     transition-property: right;
+    background: rgb(250, 180, 135);
     padding: 0px 3px 5px 4px;
   }
 
