Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -346,6 +346,12 @@ p.dot {
   height: 100%;
 }
 
+.faded-green {
+  background: rgba(40, 199, 141, 1);
+  width: 100%;
+  height: 100%;
+}
+
 input[type=checkbox] {
   position: absolute;
   left: -9999px;
