Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,34 +11,34 @@ block content
               button.noClick.faded-green Category
           th
             if sort == 'name'
-              button.noClick.green
+              button.noClick.green User
             else
 
               form(method='get' action='/sort=name&page=0')
                 button.btn(type='submit') User
           th
             if sort == 'title'
-              button.noClick.green
+              button.noClick.green Title
             else
 
               form(method='get' action='/sort=title&page=0')
                 button.btn(type='submit') Title
           th
             if sort == 'comnum'
-              button.noClick.green
+              button.noClick.green Comments
             else
               form(method='get' action='/sort=comnum&page=0')
                 button.btn(type='submit') Comments
           th
             if sort == 'views'
-              button.noClick.green
+              button.noClick.green Views
             else
 
               form(method='get' action='/sort=views&page=0')
                 button.btn(type='submit') Views
           th
             if sort == 'mdate'
-              button.noClick.green
+              button.noClick.green Last Modified
             else
 
               form(method='get' action='/sort=mdate&page=0')
