--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,38 +10,39 @@ block content
             th
               button.noClick.faded-green Category
           th
-            if sort == 'name'
-              button.noClick.green User
-            else
+            form(method='get' action='/sort=name&page=0')
+              if sort == 'name'
+                button.btn.green(type='submit') User
+              else
 
-              form(method='get' action='/sort=name&page=0')
                 button.btn(type='submit') User
           th
-            if sort == 'title'
-              button.noClick.green Title
-            else
+            form(method='get' action='/sort=title&page=0')
+              if sort == 'title'
+                button.btn.green(type='submit') Title
+              else
 
-              form(method='get' action='/sort=title&page=0')
                 button.btn(type='submit') Title
           th
-            if sort == 'comnum'
-              button.noClick.green Comments
-            else
-              form(method='get' action='/sort=comnum&page=0')
+            form(method='get' action='/sort=comnum&page=0')
+              if sort == 'comnum'
+                button.btn.green(type='submit') Comments
+              else
+
                 button.btn(type='submit') Comments
           th
-            if sort == 'views'
-              button.noClick.green Views
-            else
+            form(method='get' action='/sort=views&page=0')
+              if sort == 'views'
+                button.btn.green(type='submit') Views
+              else
 
-              form(method='get' action='/sort=views&page=0')
                 button.btn(type='submit') Views
           th
-            if sort == 'mdate'
-              button.noClick.green Last Modified
-            else
+            form(method='get' action='/sort=mdate&page=0')
+              if sort == 'mdate'
+                button.btn.green(type='submit') Last Modified
+              else
 
-              form(method='get' action='/sort=mdate&page=0')
                 button.btn(type='submit') Last Modified
       tbody
         -i = 0
