Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -65,8 +65,8 @@ block comment
           type='text'
           name='name'
           placeholder='Username'
-          pattern='.{2,64}'
-          required title='must be 2-64 characters'
+          pattern='.*\S.*.{3,20}'
+          required title='must be 3-20 characters'
         )
       br
       div
