--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -76,7 +76,7 @@ block comment
           name='paragraph'
           rows='10'
           cols='30'
-          pattern='.{3,10000}'
+          pattern='.*\S.*.{3,10000}'
           required title='must be 3-10000 characters'
         )
       br
