--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -10,8 +10,8 @@ block content
           type='text'
           name='name'
           placeholder='Username'
-          pattern='.*\S.*.{2,64}'
-          required title='must be 2-64 characters'
+          pattern='.*\S.*.{2,20}'
+          required title='must be 2-20 characters'
         )
       br
       div
@@ -19,8 +19,8 @@ block content
           type='text'
           name='title'
           placeholder='Title'
-          pattern='.*\S.*.{3,20}'
-          required title='must be 3-20 characters'
+          pattern='.*\S.*.{2,50}'
+          required title='must be 2-50 characters'
         )
       br
       div
@@ -30,7 +30,7 @@ block content
           name='paragraph'
           rows='15'
           cols='30'
-          pattern='.*\S.*.{3,10000}'
+          pattern='.{3,10000}'
           required title='must be 3-10000 characters'
         )
       div
