--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -415,3 +415,97 @@ input[type=checkbox]:not(:checked) ~ .search{
   margin: auto;
   padding-bottom: 50px;
 }
+
+table.searched {
+  width: 100%;
+  table-layout: fixed;
+}
+
+td.searched.eitt {
+  width: 25%;
+}
+
+td.eitt {
+  width: 25%;
+}
+
+.searched {
+  /*white-space: nowrap;*/
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  padding: 0;
+  text-align: center;
+  cursor: pointer;
+  margin: 0;
+}
+
+button.searched {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+form.searched.name {
+  width: 100%;
+  padding-top: 9px;
+  max-width: 100%;
+}
+
+div.searched.name{
+  width: 100%;
+  padding-top: 9px;
+  max-width: 100%;
+}
+
+p.searched {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+form.searched.title{
+  padding-top: 9px;
+}
+
+.searched.name{
+  padding-top: 3px;
+  font-size: 20px;
+  /*height: 27px;*/
+  font-weight: bold;
+  max-width: 100%;
+  width: 100%;
+}
+
+.searched.date{
+  font-size: 15px;
+  height: 50px;
+}
+
+.searched.title{
+  padding-top: 3px;
+  font-size: 22px;
+  font-weight: bold;
+  height: 30px;
+  max-width: 100%;
+  width: 100%;
+}
+
+.searched.para{
+  text-align: left;
+  font-size: 18px;
+  height: 120px;
+  white-space: normal;
+}
+.thread.para{
+  text-align: left;
+  font-size: 18px;
+  white-space: normal;
+}
+
+.noClick2 {
+  cursor: default;
+}
+p.thread {
+  padding: 10px;
+  text-align: justify;
+  cursor: text;
+}
